# mandelPlot

./: README.md  setup.cfg
docs/source/: conf.py
mandelPlot/: __julia_main__.py  __mandelbrot_main__.py  julia.py  mandelbrot.py
