[metadata]
name = mandelPlot
author = Antoine LORENTZ and Vincent GALLOT
author_email = antoine.lorentz@eleves.ec-nantes.fr
version = 1.0
license_file = LICENCE
license = GNU GPL v3
description = Mandelbrot and Julia sets image creator
long_description = file: README.md
long_description_content_type = "text/markdown"

[options]
packages = find:
python_requires = >= 3.8
install_requires =
    pytest
    numpy
    Pillow
    numba
    numba_progress
    # Liste des dépendances externes

[options.entry_points]
console_scripts =
    mandelPlot-mandelbrot=mandelPlot.__mandelbrot_main__:main
    mandelPlot-julia=mandelPlot.__julia_main__:main

[tool:pytest]
addopts = --doctest-modules --doctest-report ndiff
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS